SERVER-12596 writeConcern {} and writeConcern {wtimeout: 1000} treated like {w: 0}